--- a/app/src/main/res/layout/nav_menu.xml
+++ b/app/src/main/res/layout/nav_menu.xml
@@ -3,11 +3,19 @@
     android:layout_height="match_parent">
 
 
+
+
     <item android:id="@+id/nav_contact"
+        android:icon="@drawable/ic_acontact"
         android:title="Contact"/>
 
 
     <item android:id="@+id/nav_info"
-        android:title="Info"/>
+        android:icon="@drawable/ic_info"
+        android:title="Information"/>
+
+    <item android:id="@+id/nav_settings"
+        android:icon="@drawable/ic_settings"
+        android:title="Settings"/>
 
 </menu>
