--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,95 +10,96 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_room"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="pl.zpi.museumguide.Room">
 
-    <FrameLayout
-        android:id="@+id/background_room"
-        android:layout_width="301dp"
-        android:layout_height="353dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RelativeLayout
-            android:id="@+id/map"
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/main_room"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:context="pl.zpi.museumguide.Room">
 
-            <ImageView
-                android:id="@+id/sticker_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/sticker_2"
-                android:layout_marginStart="29dp"
-                app:srcCompat="@drawable/sticker" />
+            <FrameLayout
+                android:id="@+id/background_room"
+                android:layout_width="301dp"
+                android:layout_height="353dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="50dp">
 
-            <ImageView
-                android:id="@+id/sticker_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="69dp"
-                android:layout_marginTop="25dp"
-                app:srcCompat="@drawable/sticker" />
+                <RelativeLayout
+                    android:id="@+id/map"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/sticker_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignStart="@+id/sticker_2"
-                android:layout_marginBottom="52dp"
-                android:layout_marginStart="34dp"
-                app:srcCompat="@drawable/sticker" />
+                    <ImageView
+                        android:id="@+id/sticker_1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignTop="@+id/sticker_2"
+                        android:layout_marginStart="29dp"
+                        app:srcCompat="@drawable/sticker" />
 
-            <ImageView
-                android:id="@+id/sticker_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/sticker_3"
-                android:layout_alignStart="@+id/sticker_3"
-                android:layout_marginBottom="108dp"
-                app:srcCompat="@drawable/sticker" />
+                    <ImageView
+                        android:id="@+id/sticker_2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginEnd="69dp"
+                        android:layout_marginTop="25dp"
+                        app:srcCompat="@drawable/sticker" />
 
-        </RelativeLayout>
+                    <ImageView
+                        android:id="@+id/sticker_3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignStart="@+id/sticker_2"
+                        android:layout_marginBottom="52dp"
+                        android:layout_marginStart="34dp"
+                        app:srcCompat="@drawable/sticker" />
 
-    </FrameLayout>
+                    <ImageView
+                        android:id="@+id/sticker_4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_above="@+id/sticker_3"
+                        android:layout_alignStart="@+id/sticker_3"
+                        android:layout_marginBottom="108dp"
+                        app:srcCompat="@drawable/sticker" />
+
+                </RelativeLayout>
+
+            </FrameLayout>
 
 
-
-</android.support.constraint.ConstraintLayout>
-        </android.support.v4.widget.NestedScrollView>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <!--<RelativeLayout-->
-        <!--android:id="@+id/design_bottom_sheet"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="586dp"-->
-        <!--android:background="@color/colorAccent"-->
-        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
-        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
-        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
-        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
-        <!--app:behavior_hideable="true"-->
-        <!--app:behavior_peekHeight="50dp"-->
-        <!--app:elevation="4dp"-->
-        <!--app:layout_behavior="@string/bottom_sheet_behavior">-->
+    <!--android:id="@+id/design_bottom_sheet"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="586dp"-->
+    <!--android:background="@color/colorAccent"-->
+    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+    <!--app:behavior_hideable="true"-->
+    <!--app:behavior_peekHeight="50dp"-->
+    <!--app:elevation="4dp"-->
+    <!--app:layout_behavior="@string/bottom_sheet_behavior">-->
 
-        <!--<TextView-->
-            <!--android:id="@+id/bottomsheet_text"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:text="Work title"-->
-            <!--android:textColor="#FFFFFF" />-->
+    <!--<TextView-->
+    <!--android:id="@+id/bottomsheet_text"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:text="Work title"-->
+    <!--android:textColor="#FFFFFF" />-->
 
     <!--</RelativeLayout>-->
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -107,10 +107,10 @@
         android:layout_width="wrap_content"
         android:layout_height="618dp"
         android:background="@color/colorPrimaryDark"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-
-
         android:orientation="vertical"
+
+
+        android:paddingBottom="@dimen/activity_vertical_margin"
         app:behavior_hideable="true"
         app:behavior_peekHeight="50dp"
         app:elevation="4dp"
@@ -130,15 +130,15 @@
                 android:id="@+id/MapWorkTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="15dp"
                 android:textAlignment="center"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-       </android.support.v7.widget.Toolbar>
+                android:textSize="14sp" />
+        </android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
-                android:id="@+id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            android:id="@+id/tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
         <android.support.v4.view.ViewPager
