--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4b88a2</color>
-    <!--<color name="colorPrimaryDark">#d3d4d9</color>-->
-    <color name="colorPrimaryDark">#e7e8ed</color>
-
-    <!--<color name="colorAccent">#FF4081</color>-->
-    <color name="colorAccent">#4b88a2</color>
-    <color name="colorBackground">#b3b0b0</color>
+    <!--background-->
+    <color name="colorPrimary">#d3d4d9</color>
+    <!--elements background and status bar-->
+    <color name="colorPrimaryDark">#252627</color>
+    <!--warning elements-->
+    <color name="colorWarning">#e93143</color>
+    <color name="colorAccent">#4bbba2</color>
+    <!--light text-->
+    <color name="colorLight">#fff9fb</color>
 </resources>
