--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,8 @@
 
     <style name="BottomSheetTheme" parent="AppTheme">
         <item name="android:textColor">@color/colorLight</item>
+        <!--bottom sheet background-->
+        <!--<item name="colorPrimaryDark"></item>-->
     </style>
 
     <style name="AppTheme.NoActionBar">
