--- a/app/src/main/res/layout/author_info.xml
+++ b/app/src/main/res/layout/author_info.xml
@@ -3,29 +3,57 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/authorNameFrag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="AuthorInfo"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="23dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/authorImageFrag"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/logo"
-        android:layout_marginTop="57dp"
-        android:layout_below="@+id/authorNameFrag"
-        android:layout_centerHorizontal="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/authorInfoFrag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/authorImageFrag"
-        android:layout_centerVertical="true"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/authorNameFrag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="23dp"
+            android:text="AuthorInfo"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/authorImageFrag"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/logo"
+            android:layout_below="@+id/authorNameFrag"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/authorInfoFrag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/authorImageFrag"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="19dp"
+            android:text="Author Works"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/authorWorks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/authorInfoFrag"
+            android:lineSpacingExtra="7dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="28dp"
+            android:text="TextView"
+            android:textSize="13sp" />
+
+        </RelativeLayout>
+
+    </ScrollView>
+
 </RelativeLayout>
