--- a/app/src/main/res/layout/work_info.xml
+++ b/app/src/main/res/layout/work_info.xml
@@ -4,23 +4,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/workImageFrag"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="29dp"
-        app:srcCompat="@android:drawable/sym_def_app_icon"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:id="@+id/workDescriptionFragment"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/workImageFrag"
-        android:layout_marginTop="36dp"
-        android:text="TextView"
-        android:textAlignment="viewStart" />
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/workImageFrag"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/logo"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+
+            <TextView
+                android:id="@+id/workDescriptionFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/workImageFrag"
+                android:lineSpacingExtra="4dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp"
+                android:text="TextView"
+                android:textAlignment="viewStart"
+                android:textSize="13sp" />
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
