--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relativeLayout"
@@ -8,34 +8,6 @@
 
     tools:context="pl.zpi.museumguide.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <!--android:orientation="vertical">-->
-            <!--<include android:layout="@layout/toolbar_layout"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-
-                <!--/>-->
-
-    </LinearLayout>
-
-    <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/navigation_view"
-        android:layout_gravity="start"
-        app:menu="@layout/nav_menu"
-        app:headerLayout="@layout/nav_header"
-
-
-        >
-    </android.support.design.widget.NavigationView>
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        >
     <TextView
         android:id="@+id/titleLabel"
         android:layout_width="wrap_content"
@@ -76,5 +48,5 @@
         android:onClick="goToMap"
         android:text="Button" />
 
-    </RelativeLayout>
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
+
