Gallery logic + domain fields change.

--- a/app/src/main/res/layout/author_gallery.xml
+++ b/app/src/main/res/layout/author_gallery.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:numColumns="2"
+        android:columnWidth="50dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
         android:layout_below="@+id/textView3" />
