--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/galleryPhoto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         app:srcCompat="@drawable/sample_1" />
 
     <TextView
