--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -74,7 +74,7 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignTop="@+id/sticker_2"
                         android:layout_marginStart="29dp"
-                        app:srcCompat="@drawable/sticker" />
+                        app:srcCompat="@drawable/gui_sticker" />
 
                     <ImageView
                         android:id="@+id/sticker_2"
@@ -84,7 +84,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_marginEnd="69dp"
                         android:layout_marginTop="25dp"
-                        app:srcCompat="@drawable/sticker" />
+                        app:srcCompat="@drawable/gui_sticker" />
 
                     <ImageView
                         android:id="@+id/sticker_3"
@@ -94,7 +94,7 @@
                         android:layout_alignStart="@+id/sticker_2"
                         android:layout_marginBottom="52dp"
                         android:layout_marginStart="34dp"
-                        app:srcCompat="@drawable/sticker" />
+                        app:srcCompat="@drawable/gui_sticker" />
 
                     <ImageView
                         android:id="@+id/sticker_4"
@@ -103,7 +103,7 @@
                         android:layout_above="@+id/sticker_3"
                         android:layout_alignStart="@+id/sticker_3"
                         android:layout_marginBottom="108dp"
-                        app:srcCompat="@drawable/sticker" />
+                        app:srcCompat="@drawable/gui_sticker" />
 
                 </RelativeLayout>
 
