--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,9 @@
     <color name="colorPrimary">#d3d4d9</color>
     <!--elements background and status bar-->
     <color name="colorPrimaryDark">#252627</color>
-    <!--warning elements-->
+    <!--warning/highlight elements-->
     <color name="colorWarning">#e93143</color>
+    <color name="colorAccentLight">#9ec5cd</color>
     <color name="colorAccent">#4bbba2</color>
     <!--light text-->
     <color name="colorLight">#fff9fb</color>
