--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -1,43 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/roomLayout"
     tools:context="pl.zpi.museumguide.Room">
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include layout="@layout/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
-
-    </LinearLayout>
-
-    <android.support.design.widget.NavigationView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/navigation_view"
-        android:layout_gravity="start"
-        app:menu="@layout/nav_menu"
-        app:headerLayout="@layout/nav_header"
-
-
-        >
-    </android.support.design.widget.NavigationView>
-
-    <android.support.design.widget.CoordinatorLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        >
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -183,6 +150,5 @@
 
 
     </LinearLayout>
-    </android.support.design.widget.CoordinatorLayout>
 
-</android.support.v4.widget.DrawerLayout>
+</android.support.design.widget.CoordinatorLayout>
