--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -8,7 +8,7 @@
         android:id="@+id/galleryPhoto"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
-        app:srcCompat="@drawable/sample_1" />
+        app:srcCompat="@drawable/gui_artist_icon" />
 
     <TextView
         android:id="@+id/galleryText"
