--- a/app/src/main/res/layout/author_gallery.xml
+++ b/app/src/main/res/layout/author_gallery.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
-    <TextView
+    <pl.zpi.museumguide.CustomFontTextView
         android:id="@+id/textView3"
         android:layout_width="100dp"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
-        android:text="Author works:"
+        android:text=""
+        android:textStyle="bold"
+        android:textSize="16sp"
         android:textAlignment="center" />
 
     <GridView
