--- a/app/src/main/res/layout/work_info.xml
+++ b/app/src/main/res/layout/work_info.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,8 +22,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
-
-            <TextView
+            <pl.zpi.museumguide.CustomFontTextView
                 android:id="@+id/workDescriptionFragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,7 +33,6 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="20dp"
-                android:text="TextView"
                 android:textAlignment="viewStart"
                 android:textSize="13sp" />
 
