--- a/app/src/main/res/layout/author_info.xml
+++ b/app/src/main/res/layout/author_info.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,13 +13,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <TextView
+        <pl.zpi.museumguide.CustomFontTextView
             android:id="@+id/authorNameFrag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="23dp"
+            android:textStyle="bold"
             android:text="AuthorInfo"
             android:textSize="16sp" />
 
@@ -30,7 +33,7 @@
             android:layout_below="@+id/authorNameFrag"
             android:layout_centerHorizontal="true" />
 
-        <TextView
+        <pl.zpi.museumguide.CustomFontTextView
             android:id="@+id/authorInfoFrag"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,9 +41,10 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="19dp"
             android:text="Author Works"
+            android:textStyle="bold"
             android:textSize="16sp" />
 
-        <TextView
+        <pl.zpi.museumguide.CustomFontTextView
             android:id="@+id/authorWorks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
